--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -155,7 +155,7 @@ ul {
     border: solid hotpink;
 }*/
 
-.restaurant-title {
+/*.restaurant-title {
     border: solid indigo;
     &__h1 {
         border: solid steelblue;
@@ -173,12 +173,12 @@ ul {
     border: solid black;
     /*&__name {
         border: solid chocolate;
-    }*/
+    }
 }
 
 .dishes-wrapper {
     border: solid darkcyan;
-}
+}*/
 
 /*.dish-card {
     border: solid orangered;
